<resources>
    <string name="app_name">MyProject</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="add_user_info">Add User Info</string>
    <string name="update_user_info">Update User Info</string>
    <string name="my_rides">My Rides</string>
    <string name="payment">Payment</string>
    <string name="my_email">timilein.tijani@aol.com</string>
    <string name="App_tag">UT Austin Ride Sharing</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="add_driver">Add Driver</string>
    <string name="email">Email</string>
    <string name="sign_in_here">Sign in Here</string>
    <string name="age">Age</string>
    <string name="signUpemail">Email</string>
    <string name="signUppassword">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="add_new_driver">Add New Driver</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_password">Password</string>
    <string name="sign_in_email">Email</string>
    <string name="not_registered_sign_up">Not registered? Sign Up</string>
    <string name="log_out">Log out</string>
    <string name="already_registered_sign_in">Already registered? Sign In.</string>
</resources>
