<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/signInBanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:text="@string/sign_in"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/signInPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/signInEmail"
        android:layout_below="@+id/signInEmail"
        android:layout_marginTop="41dp"
        android:ems="10"
        android:hint="@string/sign_in_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/signInEmail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/signInBanner"
        android:layout_marginStart="40dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/sign_in_email"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/signInBanner"
        android:layout_below="@+id/signInPassword"
        android:layout_marginTop="63dp"
        android:text="Sign In" />

    <TextView
        android:id="@+id/signUpLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signInButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:text="@string/not_registered_sign_up"
        android:textStyle="bold" />
</RelativeLayout>